chore: fix pr comments